<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="SimpleLoginApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="57" translatesAutoresizingMaskIntoConstraints="NO" id="p02-jI-lKG">
                                <rect key="frame" x="0.0" y="167" width="414" height="289.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to FireFly!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="src-Nl-l0L">
                                        <rect key="frame" x="132" y="0.0" width="150.5" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xco-l5-IKs">
                                        <rect key="frame" x="132" y="77.5" width="150.5" height="34"/>
                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="USERNAME"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XPg-mp-9VF">
                                        <rect key="frame" x="132" y="168.5" width="150.5" height="34"/>
                                        <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PASSWORD"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invalid username or password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktM-zF-cYF">
                                        <rect key="frame" x="93.5" y="231" width="227" height="0.0"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3d-PZ-8XR">
                                        <rect key="frame" x="132" y="259.5" width="150.5" height="30"/>
                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LOGINBTN"/>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" red="0.96078431369999995" green="0.95686274510000002" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="loginButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x0t-yi-zCn"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="a3d-PZ-8XR" firstAttribute="leading" secondItem="Xco-l5-IKs" secondAttribute="leading" id="3uL-d4-tVC"/>
                                    <constraint firstItem="a3d-PZ-8XR" firstAttribute="trailing" secondItem="Xco-l5-IKs" secondAttribute="trailing" id="HBC-QO-Jem"/>
                                    <constraint firstItem="XPg-mp-9VF" firstAttribute="leading" secondItem="Xco-l5-IKs" secondAttribute="leading" id="J7Z-Mw-9ed"/>
                                    <constraint firstItem="Xco-l5-IKs" firstAttribute="leading" secondItem="src-Nl-l0L" secondAttribute="leading" id="gnt-iW-1w2"/>
                                    <constraint firstItem="Xco-l5-IKs" firstAttribute="trailing" secondItem="src-Nl-l0L" secondAttribute="trailing" id="ids-Qc-M3O"/>
                                    <constraint firstItem="XPg-mp-9VF" firstAttribute="trailing" secondItem="Xco-l5-IKs" secondAttribute="trailing" id="wIf-XG-4Vr"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p02-jI-lKG" secondAttribute="trailing" id="1P8-f4-daG"/>
                            <constraint firstItem="p02-jI-lKG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="123" id="TYJ-dY-xVk"/>
                            <constraint firstItem="p02-jI-lKG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TqP-tY-ZDo"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="loginButton" destination="a3d-PZ-8XR" id="yxX-uX-feF"/>
                        <outlet property="loginErrorDescriptionLabel" destination="ktM-zF-cYF" id="ssy-IN-QBM"/>
                        <outlet property="passwordTextField" destination="XPg-mp-9VF" id="zcX-GU-w9r"/>
                        <outlet property="usernameTextField" destination="Xco-l5-IKs" id="Jnl-9a-JSx"/>
                        <segue destination="kL2-Ib-zAH" kind="show" identifier="showUsernameSegue" id="bog-dV-WzH"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="139" y="138"/>
        </scene>
        <!--Welcome View Controller-->
        <scene sceneID="wds-OK-2Ue">
            <objects>
                <viewController storyboardIdentifier="WelcomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kL2-Ib-zAH" customClass="WelcomeViewController" customModule="SimpleLoginApp" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tGY-wd-Q6p">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome Back" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tZf-fv-PGK">
                                <rect key="frame" x="150" y="148" width="114" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eeL-mv-2QX">
                                <rect key="frame" x="168" y="199" width="78.5" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="LOGINUSER"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="tZf-fv-PGK" firstAttribute="top" secondItem="x3x-7l-DxO" secondAttribute="top" constant="148" id="249-WH-bjo"/>
                            <constraint firstItem="eeL-mv-2QX" firstAttribute="centerX" secondItem="tGY-wd-Q6p" secondAttribute="centerX" id="GJE-Uz-hma"/>
                            <constraint firstItem="tZf-fv-PGK" firstAttribute="centerX" secondItem="tGY-wd-Q6p" secondAttribute="centerX" id="SV7-SN-hev"/>
                            <constraint firstItem="eeL-mv-2QX" firstAttribute="top" secondItem="tZf-fv-PGK" secondAttribute="bottom" constant="30" id="lDm-Db-9ZU"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="x3x-7l-DxO"/>
                    </view>
                    <navigationItem key="navigationItem" id="GoW-nJ-Eeh"/>
                    <connections>
                        <outlet property="usernameLabel" destination="eeL-mv-2QX" id="n3a-sf-nB9"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="UPA-Aa-5g1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1069.5652173913045" y="137.94642857142856"/>
        </scene>
    </scenes>
</document>
